0.3.4
- general:
  - global "insure"->"ensure" change.  in US english "insure" is actually
  largely interchangeable with "ensure" (so says the dictionary), so I'm not 
  completely illiterate, but its definitely sub-optimal to "ensure" which is
  non-ambiguous.
- sql:
  - added "fetchmany()" support to ResultProxy
  - fix to correlation of subqueries when the column list of the select statement
  is constructed with individual calls to append_column(); this fixes an ORM
  bug whereby nested select statements were not getting correlated with the 
  main select generated by the Query object.
  - another fix to subquery correlation so that a subquery which has only one FROM
  element will *not* correlate that single element, since at least one FROM element is 
  required in a query.
  - default "timezone" setting is now False.  this corresponds to Python's datetime
  behavior as well as Postgres' timestamp/time types (which is the only timezone-sensitive
  dialect at the moment) [ticket:414]
  - the "op()" function is now treated as an "operation", rather than a "comparison".
  the difference is, an operation produces a BinaryExpression from which further operations
  can occur whereas comparison produces the more restrictive BooleanExpression
  - trying to redefine a reflected primary key column as non-primary key raises an error
  - type system slightly modified to support TypeDecorators that can be overridden by the dialect
  (ok, thats not very clear, it allows the mssql tweak below to be possible)
- mssql:
  - added an NVarchar type (produces NVARCHAR), also MSUnicode which provides Unicode-translation
  for the NVarchar regardless of dialect convert_unicode setting.
- postgres:
  - fix to the initial checkfirst for tables to take current schema into account [ticket:424]
  - postgres has an optional "server_side_cursors=True" flag which will utilize
    server side cursors.  these are appropriate for fetching only partial results 