@@ -6,6 +6,8 @@
   non-ambiguous.
 - sql:
   - added "fetchmany()" support to ResultProxy
+  - changed "BooleanExpression" to subclass from "BinaryExpression", so that boolean
+  expressions can also follow column-clause behaviors (i.e. label(), etc).
   - fix to correlation of subqueries when the column list of the select statement
   is constructed with individual calls to append_column(); this fixes an ORM
   bug whereby nested select statements were not getting correlated with the 
